# docwritingapp

./: .dockerignore  .env.example  .gitignore  HANDOFF.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  release.json  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  desktop-release.yml  desktop.yml  e2e.yml  performance.yml  security.yml
apps/: README.md
apps/api/: package.json  tsconfig.json  vitest.config.ts
apps/collaboration/: package.json  tsconfig.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/portable/: README.txt  package.json
apps/web/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/worker/: package.json  vitest.config.ts
docs/: CALISTIRMA.md  DESKTOP.md  DOORS-PARITY.md  DURUM-RAPORU.md  ENTERPRISE-ADVANTAGE-ROADMAP.md  PERFORMANCE-ACCESSIBILITY.md  PILOT-YONETICI-KILAVUZU.md  RELEASE_NOTES_v0.1.6.md  RELEASE_NOTES_v0.1.7.md  RELEASE_NOTES_v0.2.0.md  WINDOWS-PORTABLE.md  WORK_AND_TEST_MANAGEMENT.md
docs/adr/: 0001-modular-monolith.md  0002-monorepo.md  0003-nestjs-fastify.md  0004-postgresql-prisma.md  0005-redis-responsibilities.md  0006-yjs-hocuspocus.md  0007-hierarchy-storage.md  0008-audit-soft-delete.md  0009-object-storage.md  0010-rest-websocket-split.md  0011-browser-first.md  0012-web-desktop-distribution.md
docs/architecture/: concurrency.md  database-design.md  (+4 more)
infra/: github-ci.yml
(+249 files in other folders)
